# merkle_trie_toolkit

./: .gitignore  .gitmodules  COPYING  Makefile.am  Makefile.am.fragment  README.md  configure.ac  merkle-trie-shenanigans.pc.in  merkle_trie_toolkit-uninstalled.pc.in  merkle_trie_toolkit.pc.in  test.cc
include/mtt/common/: bitvector.h  concepts.h  debug_levels.h  debug_macros.h  deferred_gc.h  insert_fn.h  prefix.h  proof.h  types.h  utils.h
include/mtt/ephemeral_trie/: allocator.h  atomic_ephemeral_trie.h  concepts.h  ranges.h
include/mtt/layered_trie/: concepts.h  layered_trie.h
include/mtt/memcached_snapshot_trie/: durable_interface.h  in_memory_interface.h  memcache_trie.h  null_interface.h  serialize_disk_interface.h  utils.h
include/mtt/snapshot_trie/: atomic_merkle_trie.h  concepts.h  optional_value.h
include/mtt/trie/: .gitignore  atomic_merkle_trie.h  bitvector.h  children_map.h  configs.h  debug_macros.h  hash_log.h  merkle_trie.h  metadata.h  prefix.h  ranges.h  spinlock.h  types.h  utils.h
include/mtt/trie/recycling_impl/: allocator.h  atomic_ranges.h  atomic_trie.h  children_map.h  metadata.h  ranges.h  trie.h
include/mtt/trie/xdr/: types.x
include/mtt/utils/: non_movable.h  serialize_endian.h  threadlocal_cache.h  time.h
include/trie/: bitvector.h  build_endian.h.in  children_map.h  debug_macros.h  merkle_trie.h  prefix.h  utils.h
include/trie/recycling_impl/: children_map.h  ranges.h  trie.h
include/trie/xdr/: types.x
include/utils/: serialize_big_endian.h  threadlocal_cache.h
m4/: ax_pkgconfig_subdir_nocond.m4
tests/: offer_metadata.h  recycling_metadata.h  test_accumulate_values.cc  test_atomic_merkle_trie.cc  test_atomic_trie.cc  test_ephemeraltrie_proofs.cc  test_layered_trie.cc  test_memcache_trie.cc  test_merkle_trie.cc  test_merkle_trie.h  test_merkle_trie_metadata.cc  test_merkle_trie_metadata.h  test_prefix.cc  test_prefix.h  test_recycling_trie.cc  test_recycling_trie.h  test_serialize.cc  test_serialize.h  test_types.h
tests/xdr/: test_types.x
